tests/paczka1/fuzzy1/76230474.err
Error in line 1: gZA S919 4,6
Error in line 4: fopAwD S919 91,7
Error in line 3: ZXA89SrdEpc A30 62,8
Error in line 16: mMgIw4TtC S890 13,8
Error in line 23: gZA S890 50,3
Error in line 19: mMgIw4TtC S919 27,4
Error in line 25: qA0isxCm S919 3,0
Error in line 15: S890 A384 125,8
Error in line 33: fopAwD A30 37,8
